--- a/ism647_ML1_ANN_SMOTE.ipynb
+++ b/ism647_ML1_ANN_SMOTE.ipynb
@@ -625,6 +625,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Confusion Matrix\n",
+    "<p>\n",
+    "Visual representation of performance of model predictions vs test values."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -665,6 +674,15 @@
     "plt.ylabel('Actual')\n",
     "plt.title('Confusion Matrix')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create classification report\n",
+    "<p>\n",
+    "Describes performance vs the various outcomes predicted and the test set."
    ]
   },
   {
