--- a/ism647_ML1_Data_Cleaning_Encoding.ipynb
+++ b/ism647_ML1_Data_Cleaning_Encoding.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Necessary Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -14,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import Data\n",
+    "## Import Raw Data\n",
     "<p>\n",
     "Import data from csv and print head of df\n",
     "<p>\n",
@@ -1984,7 +1991,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Start Machine Learning Processing\n",
+    "## Start Machine Learning Data Preparation\n",
     "<p>\n",
     "Create a target variable\n"
    ]
@@ -3929,6 +3936,13 @@
     "\n",
     "# check the shape of the encoded dataframe\n",
     "describe_with_nulls_and_dtype(df_encoded_norm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Output the cleaned, encoded, and normalized data for use in model training."
    ]
   },
   {
